--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <body>
   <!-- Really basic map -->
   <div id="map" style="height: 500px;"></div>
+  <h1 id="instruc">Instruction:</h1>
 
   <!-- Needs to come after the div container so that JS can find it-->
   <script src="js/mapSetup.js"></script>
