--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   <script src="js/nav.js"></script>
   <script src="js/show_starting_dot.js"></script>
   <script src="js/vec_utils.js"></script>
+  <script src="js/testing.js"></script>
   <script src="js/live_instructions.js"></script>
   <script src="js/live_correction.js"></script>
   <select id="starts">
@@ -32,6 +33,7 @@
   <script src="js/temp_route_gen.js"></script>
   <button onclick="route_gen()">Generate Route</button>
   <button onclick="temp_start()">Start Route</button>
+  <script src="js/live_directions_test.js"></script>
 </body>
 
 
