--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>SDS NAV</title>
   <!-- Stops the map from breaking -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Loads leaflet from unpkg-->
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
   <script src="js/resources/school_map.js"></script>
