--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
 <body>
   <div class="sidebar" id="sidebar">
+    <p style="color:black;">Where do you want to go today?</p>
     <input type="search" style="width: 90%; height:4%;" id="dest_search">
     <div id="results">
       <!--
